--- a/src/app/user/modules/participate/components/join-organisation/portal-participate-join-organisation.component.html
+++ b/src/app/user/modules/participate/components/join-organisation/portal-participate-join-organisation.component.html
@@ -20,8 +20,8 @@
   <div class="scroll">
     <div *ngFor="let organisation of joinableOrganisations">
       <label>
-        <img  *ngIf="organisation.uploads && organisation.uploads.length > 0" class="border-image" 
-        [src]="(organisation.uploads | filter: { card: true })[0].media.url">
+        <img  *ngIf="organisation.uploads && organisation.uploads.length > 0" class="border-image"
+          [src]="(organisation.uploads | filter: { card: true })?.[0]?.media.url">
         <span>{{organisation?.name}}</span>
         <mat-checkbox [checked]="selectedOrganisations.includes(organisation)"
           (change)="toggleSelectedOrganisation(organisation, $event.checked)">
