fix(ios): preparing for iOS

--- a/src/app/portal/modules/footer/components/mobile/portal-footer-mobile.component.html
+++ b/src/app/portal/modules/footer/components/mobile/portal-footer-mobile.component.html
@@ -1,7 +1,7 @@
 <footer>
   <app-portal-menu-accordion [boldTitle]="true" [headerOnly]="false"></app-portal-menu-accordion>
   <aside>
-    <app-footer-appstore></app-footer-appstore>
+    <!-- <app-footer-appstore></app-footer-appstore> -->
     <app-footer-socialmedia></app-footer-socialmedia>
   </aside>
 </footer>
