--- a/src/app/portal/modules/layout/portal-layout.component.html
+++ b/src/app/portal/modules/layout/portal-layout.component.html
@@ -1,6 +1,6 @@
 <cin-loading>
   <div>
-    <app-portal-header></app-portal-header>
+    <app-portal-header [class.ios]="isIOs"></app-portal-header>
     <main>
       <router-outlet></router-outlet>
     </main>
