--- a/src/app/portal/modules/layout/portal-layout.component.scss
+++ b/src/app/portal/modules/layout/portal-layout.component.scss
@@ -11,6 +11,10 @@ app-portal-header {
   z-index: 99;
 }
 
+.ios {
+  --header-height: 6rem;
+}
+
 main {
   margin-top: var(--header-height);
   flex: 2 0 calc(100vh - var(--header-height));
