fix(ios): fixed header for ios

--- a/src/app/portal/modules/header/components/portal-header.component.html
+++ b/src/app/portal/modules/header/components/portal-header.component.html
@@ -1,6 +1,5 @@
 <mat-toolbar
-  [class.scrolled]="scrolled"
-  [class.ios]="isIOs">
+  [class.scrolled]="scrolled">
   <app-portal-header-desktop></app-portal-header-desktop>
   <app-portal-header-mobile></app-portal-header-mobile>
 </mat-toolbar>
